--- a/index.html
+++ b/index.html
@@ -42,20 +42,15 @@
         </div>
       </nav>
 
-      <div class="card" style="width: 18rem;">
-        <div class="card-header">
-          User
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-      </div>
+    <div class="container mt-4">
+      <h2>Usuarios Guardados</h2>
+      <div id="usersContainers" class="row mt-3"></div>
+    </div>
 
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
     <script src="usuario.js"></script>  
+    
 
 
 </body>
